[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-adaptive-trading-agent"
version = "0.1.0"
description = "Initial neuro-adaptive trading agent prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "yfinance>=0.2.40",
  "gymnasium>=0.29",
  "torch>=2.2",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
